--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -277,7 +277,30 @@ body {
   gap: 0.5rem;
   flex-grow: 1;
   overflow: hidden;
+  height: 59.344px;
 }
+
+.events.scroll {
+  overflow-y: auto;
+}
+
+.events.scroll::-webkit-scrollbar {
+  width: 5px; 
+}
+
+.events.scroll::-webkit-scrollbar-thumb {
+  background-color: var(--blue-background);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.events.scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 
 .events-view-more-btn {
   border: none;
